# DVA_V3

./: Architecture.md  Decisions.md  README.md  Readme.md  app.py  copilot_instructions.md  pyproject.toml  streamlit_app.py
CLI/: main.py
UI/: app.py
configs/: default_config.py  retailer.yaml  yaml_loader.py
models/: __init__.py  chunk.py  config.py  core.py  enums.py  mapping.py  schema_row.py  system_config.py  validation_result.py
parsers/: engine.py  flattener.py  mapper.py  reader.py  schema_mapper.py  tokenizer.py  transaction_builder.py
pipeline/: run.py
reports/: excel_writer.py
services/: parser_service.py  validation_service.py
tests/integration/: test_pipeline.py
tests/models/: test_config.py  test_models.py
tests/parsers/: test_flattener.py  test_mapper.py  test_reader.py  test_tokenizer.py  test_transaction_builder.py
tests/reports/: test_excel_writer.py
tests/validators/: test_item_validator.py  test_item_validator_performance.py  test_missing_store_validator.py  test_missing_store_validator_performance.py  test_store_validator.py  test_store_validator_performance.py  test_summary_validator.py  test_upc_validator.py  test_upc_validator_performance.py  test_validator_framework.py
validators/: __init__.py  base.py  item_validator.py  manager.py  missing_store_validator.py  raw_data_review.py  store_validator.py  summary_validator.py  unique_upc_validator.py  upc_validator.py
