[project]
name = "dav-framework-v3"
version = "0.1.0"
description = "Streaming Retail POS Processing Framework"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "polars>=0.20.0",
    "pyyaml>=6.0",
    "streamlit>=1.30.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

fix = true

[tool.ruff.lint.isort]
known-first-party = ["dav_v2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"